[project]
name = "mc-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "kittentts>=0.1.3",
    "ollama>=0.6.1",
    "openai>=2.28.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
